<resources>
    <string name="app_name">Care Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Care Companion</string>
    <string name="nav_header_subtitle">Your one stop shop for mental wellbeing :)</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_notification_log">Notification Log</string>
    <string name="menu_work_tracker">Break Tracker</string>
    <string name="menu_puppies">Puppies</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <string name="home_second">Home Second</string>
    <string name="break_reminder_button_text_start">Start Session</string>
    <string name="break_reminder_button_text_stop">Stop Session</string>
    <string name="break_reminder_text_start_1">Remind me to take a break every</string>
    <string name="break_reminder_text_start_2">mins</string>
    <string name="break_reminder_going_text">You have been going for %1$d hours, %2$d minutes</string>
    <string name="break_reminder_until_next_text">%1$d:%2$d minutes until your next break</string>

    <string name="reminder_title_sleep">Sleep</string>
    <string name="reminder_title_sleep_wake">Wake up time</string>
    <string name="reminder_title_sleep_bed">Bed time</string>
    <string name="reminder_sleep_default_wake">08:00 &#128394;</string>
    <string name="reminder_sleep_default_bed">22:00 &#128394;</string>
    <string name="reminder_title_meals">Meals</string>
    <string name="reminder_title_meals_breakfast">Breakfast</string>
    <string name="reminder_title_meals_lunch">Lunch</string>
    <string name="reminder_title_meals_dinner">Dinner</string>
    <string name="reminder_meals_time_breakfast">09:00 &#128394;</string>
    <string name="reminder_meals_time_lunch">13:00 &#128394;</string>
    <string name="reminder_meals_time_dinner">17:00 &#128394;</string>
    <string name="reminder_title_water">Water</string>
    <string name="reminder_title_string_1">Remind me</string>
    <string name="reminder_title_string_2">times per day</string>

    <string name="water_reminder_title">Water reminder</string>
    <string name="water_reminder_body_0">Remember to drink water! (0)</string>
    <string name="water_reminder_body_1">Remember to drink water! (1)</string>
    <string name="water_reminder_body_2">Remember to drink water! (2)</string>

    <string name="meal_reminder_title">Meal reminder</string>
    <string name="meal_reminder_body_0">Remember to eat! (0)</string>
    <string name="meal_reminder_body_1">Remember to eat! (1)</string>
    <string name="meal_reminder_body_2">Remember to eat! (2)</string>

    <string name="bedtime_reminder_title">Bedtime reminder</string>
    <string name="bedtime_reminder_body_0">Time to snooze. Morning-you will thank you!</string>
    <string name="bedtime_reminder_body_1">*yawn* Time to start thinking about bed.</string>
    <string name="bedtime_reminder_body_2">Sleep time 💤💤💤💤💤</string>

    <string name="puppies_button">Give me puppy!</string>
    <string name="time_format">HH:mm  &#128394;</string>

    <string name="help_top">Care Companion wants you to be feeling your best 😊</string>
    <string name="help_water_title">Water 💧💧💧</string>
    <string name="help_water_1">Generally speaking, the average adult should consume around 8 glasses of water per day.</string>
    <string name="help_water_2">If you struggle to remember to drink water throughout the day, we can help you achieve your daily water intake!</string>
    <string name="help_water_3">If you want to keep things simple, these guidelines should apply to the majority of people</string>
    <string name="help_water_4">- When you are thirsty, drink</string>
    <string name="help_water_5">- When you are not thirsty any more, stop</string>
    <string name="help_water_6">- During high heat and exercise, drink enough to compensate for the lost fluids</string>
    <string name="help_water_7">- That\'s it!</string>
    <string name="help_meal_title">Meal 🍎🍔🍉</string>
    <string name="help_meal_1">Not everyone remembers when to eat each day. Even if our stomach is grumbling, some struggle to take note of this!</string>
    <string name="help_meal_2">The meal reminder screen takes into consideration the need for 3 square meals a day. Enable or disable notifications for each meal type as desired.</string>
    <string name="help_sleep_title">Sleep 😴🛏️💤</string>
    <string name="help_sleep_1">The National Sleep Foundation recommends 7–9 hours of sleep a night for adults up to the age of 65, and 7–8 hours for those over 65. Some people naturally sleep slightly more or slightly less than these recommended hours.</string>
    <string name="help_break_title">Mental Breaks 👨‍🏭 🏭👨‍💻</string>
    <string name="help_break_1">Mental breaks are super important!</string>
    <string name="help_break_2">Sometimes we get so stuck in tasks, that it can be hard to pull back from them and take a moment to refresh. We hope the break tracker allows you to achieve your goals without leading to burnout.</string>
    <string name="help_break_3">What should I do in a break?</string>
    <string name="help_break_4">- Get away from screens. Give your mind a mental break</string>
    <string name="help_break_5">- Take a walk</string>
    <string name="help_break_6">- Drink a glass of water!</string>
    <string name="help_break_7">- Practise mindfulness. Take some time to think about what you’re grateful for</string>

    <string name="about_subtext">Developed during LoveHack, for you</string>
</resources>
