<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_notification_important_black"
            android:title="@string/menu_reminders"/>
        <item
            android:id="@+id/nav_notification_log"
            android:icon="@drawable/ic_timer_black"
            android:title="@string/menu_notification_log" />
        <item
            android:id="@+id/nav_work_tracker"
            android:icon="@drawable/ic_timer_black"
            android:title="@string/menu_work_tracker" />
        <item
            android:id="@+id/nav_puppies"
            android:icon="@drawable/ic_menu_dog"
            android:title="@string/menu_puppies" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_happy_face"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_happy_face"
            android:title="@string/menu_about" />
    </group>
</menu>
