<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_reminders">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lovehack.carecompanion.ui.workTracker.WorkTrackerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_work_tracker">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.lovehack.carecompanion.ui.workTracker.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lovehack.carecompanion.ui.puppies.PuppiesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_puppies" />

    <fragment
        android:id="@+id/nav_reminders"
        android:name="com.lovehack.carecompanion.ui.reminders.ReminderFragment"
        android:label="@string/menu_reminders"
        tools:layout="@layout/fragment_reminders" />

    <fragment
        android:id="@+id/nav_work_tracker"
        android:name="com.lovehack.carecompanion.ui.workTracker.WorkTrackerFragment"
        android:label="@string/menu_work_tracker"
        tools:layout="@layout/fragment_work_tracker" />

    <fragment
        android:id="@+id/nav_puppies"
        android:name="com.lovehack.carecompanion.ui.puppies.PuppiesFragment"
        android:label="@string/menu_puppies"
        tools:layout="@layout/fragment_puppies" />

</navigation>